--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "twbs/bootstrap-icons": "^1.11",
+        "yajra/laravel-datatables": "^10.0",
+        "yajra/laravel-datatables-oracle": "10.3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
